--- a/locations.yml
+++ b/locations.yml
@@ -1,3 +1,6 @@
-defaultStorageMapping: null
+defaultStorageMapping: WORK
 fileVersion: 1
-locations: []
+locations:
+  - DWH
+  - SRC_SAP
+  - STAGE
