--- a/nodes/WORK-unity_sap_adrc_tmp.yml
+++ b/nodes/WORK-unity_sap_adrc_tmp.yml
@@ -23,12 +23,12 @@ steps:
             dataType: VARCHAR
             description: ""
             isBusinessKey: false
-            name: client
+            name: CLIENT
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 409dabc0-67e9-4c8e-aef4-636a6e836b8a
-                    stepCounter: 40f829e0-39fa-4411-a4be-e4687b39961d
+                  - columnCounter: 3b010286-f3d0-490c-9416-d9818376619b
+                    stepCounter: a9186cba-cf02-4efc-a956-1312ddef8bcc
                 transform: ADRC.CLIENT
           - columnReference:
               columnCounter: 3668087d-6c52-4b75-a220-baa50825b0d2
@@ -36,12 +36,12 @@ steps:
             dataType: NUMBER
             description: ""
             isBusinessKey: true
-            name: addrnumber
+            name: ADDRNUMBER
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 3668087d-6c52-4b75-a220-baa50825b0d2
-                    stepCounter: 40f829e0-39fa-4411-a4be-e4687b39961d
+                  - columnCounter: a7225ad3-aca2-4363-ba0f-4f52e3fbd38c
+                    stepCounter: a9186cba-cf02-4efc-a956-1312ddef8bcc
                 transform: ADRC.ADDRNUMBER
           - columnReference:
               columnCounter: 26a391c7-be2e-4b88-97bb-bb951ccf2378
@@ -49,12 +49,12 @@ steps:
             dataType: VARCHAR
             description: ""
             isBusinessKey: false
-            name: name1
+            name: NAME1
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 26a391c7-be2e-4b88-97bb-bb951ccf2378
-                    stepCounter: 40f829e0-39fa-4411-a4be-e4687b39961d
+                  - columnCounter: 8a9484ec-592f-4f49-8176-f9d4627947a5
+                    stepCounter: a9186cba-cf02-4efc-a956-1312ddef8bcc
                 transform: ADRC.NAME1
           - columnReference:
               columnCounter: beb8e31a-194e-4656-9605-c88ec43946a5
@@ -62,12 +62,12 @@ steps:
             dataType: VARCHAR
             description: ""
             isBusinessKey: false
-            name: country_code
+            name: COUNTRY_CODE
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: beb8e31a-194e-4656-9605-c88ec43946a5
-                    stepCounter: 40f829e0-39fa-4411-a4be-e4687b39961d
+                  - columnCounter: 4241bb9e-69ed-4b08-b8f4-90b4fec78799
+                    stepCounter: a9186cba-cf02-4efc-a956-1312ddef8bcc
                 transform: ADRC.COUNTRY
         cteString: ""
         description: ""
@@ -75,14 +75,15 @@ steps:
         enabledColumnTestIDs: []
         materializationOption: ""
         sourceMapping:
-          - aliases: {}
+          - aliases:
+              ADRC: a9186cba-cf02-4efc-a956-1312ddef8bcc
             customSQL:
               customSQL: ""
             dependencies:
               - locationName: SAMPLE
                 nodeName: ADRC
             join:
-              joinCondition: from {{ ref('SAMPLE', 'ADRC') }} where slt_delete = ' ' and nation = ' ' and date_to = '99991231'
+              joinCondition: FROM {{ ref('SAMPLE', 'ADRC') }} ADRC WHERE ADRC.slt_delete = ' ' AND ADRC.nation = ' ' AND ADRC.date_to = '99991231'
             name: unity_sap_adrc_tmp
             noLinkRefs: []
       name: unity_sap_adrc_tmp
